--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://x.com/ubaidshaikkk"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.instagram.com/ubaidshaik24/"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="curriculum vitae.pdf" class="btn">Download CV</a>
+            <a href="Ubaidullah Shaik CV.pdf" class="btn">Download CV</a>
         </div>
     </section>
 </body>
